# macOS-activity-tracker

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  activity-tracker.spec  pulse.spec  pyproject.toml  requirements.txt  setup.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
scripts/: build-app.sh  create-dmg.sh  fix-unicode-data.py
src/activity_tracker/: __init__.py  __main__.py  activity_monitor.py  config.py  core.py  daemon.py  data_aggregator.py  detection.py  http_sync.py  menu_bar.py  storage.py  sync.py  utils.py
src/pulse/: __init__.py  __main__.py  activity_monitor.py  config.py  core.py  daemon.py  data_aggregator.py  detection.py  http_sync.py  menu_bar.py  storage.py  sync.py  utils.py
tests/: __init__.py  conftest.py  test_activity_monitor.py  test_cli.py  test_config.py  test_core.py  test_core_logic.py  test_daemon.py  test_data_aggregator.py  test_detection.py  test_http_sync.py  test_http_sync_timeout.py  test_menu_bar.py  test_sync.py  test_utils.py
